@@ -4104,6 +4104,10 @@ deduce_initialize_type (struct cb_initialize *p, struct cb_field *f,
 	}
 	/* LCOV_EXCL_STOP */
 
+	if (f->flag_sign_separate) {	/* Need to use cob_move for this one */
+		return INITIALIZE_ONE;
+	}
+
 	if (f->flag_external && !p->flag_init_statement) {
 		return INITIALIZE_NONE;
 	}
